# LANChat

./: CMakeLists.txt  README.md
include/: networkmanager.h
src/: main.cpp  networkmanager.cpp
ui/: Main.qml
